# Generated by Django 6.0.3 on 2026-03-16 08:40

import django.core.validators
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Demande',
            fields=[
                ('id_demande', models.AutoField(primary_key=True, serialize=False)),
                ('date_demande', models.DateTimeField(auto_now_add=True)),
                ('urgence', models.CharField(choices=[('normal', 'normal'), ('moyen', 'moyen'), ('urgent', 'urgent')], default='normal', max_length=10)),
                ('statut', models.CharField(choices=[('en_cours', 'en_cours'), ('validee', 'validee'), ('en_preparation', 'en_preparation'), ('complete_avec_decharge', 'complete_avec_decharge'), ('partielle', 'partielle'), ('refusee', 'refusee')], default='en_cours', max_length=30)),
                ('justification', models.TextField(blank=True)),
                ('date_validation', models.DateTimeField(blank=True, null=True)),
                ('commentaire_validation', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'demande',
                'verbose_name_plural': 'demandes',
            },
        ),
        migrations.CreateModel(
            name='LigneDemande',
            fields=[
                ('id_ligne', models.AutoField(primary_key=True, serialize=False)),
                ('quantite_demandee', models.IntegerField()),
                ('quantite_accordee', models.IntegerField(default=0)),
                ('disponibilite_pct', models.IntegerField(default=0, validators=[django.core.validators.MinValueValidator(0), django.core.validators.MaxValueValidator(100)])),
                ('observation', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'ligne de demande',
                'verbose_name_plural': 'lignes de demande',
            },
        ),
    ]
