# Generated by Django 6.0.3 on 2026-03-16 08:40

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Role',
            fields=[
                ('id_role', models.AutoField(primary_key=True, serialize=False)),
                ('nom_role', models.CharField(choices=[('service_financiere', 'service_financiere'), ('gestionnaire_magasin', 'gestionnaire_magasin'), ('chef_service', 'chef_service'), ('admin', 'admin'), ('fournisseur', 'fournisseur')], max_length=100, unique=True)),
                ('description', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'role',
                'verbose_name_plural': 'roles',
            },
        ),
        migrations.CreateModel(
            name='Service',
            fields=[
                ('id_service', models.AutoField(primary_key=True, serialize=False)),
                ('nom_service', models.CharField(max_length=200)),
                ('type_service', models.CharField(choices=[('administratif', 'administratif'), ('chu', 'chu'), ('decanat', 'decanat'), ('pharmacie', 'pharmacie'), ('dentaire', 'dentaire'), ('labo', 'labo'), ('association', 'association')], max_length=100)),
                ('description', models.TextField(blank=True)),
                ('lettre_nomination_chef', models.FileField(blank=True, null=True, upload_to='services/nominations/')),
            ],
            options={
                'verbose_name': 'service',
                'verbose_name_plural': 'services',
            },
        ),
        migrations.CreateModel(
            name='Utilisateur',
            fields=[
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('id_utilisateur', models.AutoField(primary_key=True, serialize=False)),
                ('nom_complet', models.CharField(max_length=200)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('actif', models.BooleanField(default=True)),
                ('titre_poste', models.CharField(blank=True, max_length=100)),
                ('date_creation', models.DateTimeField(auto_now_add=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
                ('id_role', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='users.role')),
                ('id_service', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='users.service')),
            ],
            options={
                'verbose_name': 'utilisateur',
                'verbose_name_plural': 'utilisateurs',
            },
        ),
        migrations.CreateModel(
            name='Fournisseur',
            fields=[
                ('id_fournisseur', models.AutoField(primary_key=True, serialize=False)),
                ('nom_societe', models.CharField(max_length=255)),
                ('nom_responsable', models.CharField(max_length=200)),
                ('email', models.EmailField(max_length=254)),
                ('telephone', models.CharField(blank=True, max_length=20)),
                ('adresse', models.TextField(blank=True)),
                ('evaluation', models.DecimalField(blank=True, decimal_places=2, max_digits=3, null=True)),
                ('id_utilisateur', models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='fournisseur_profile', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'fournisseur',
                'verbose_name_plural': 'fournisseurs',
            },
        ),
        migrations.CreateModel(
            name='Permission',
            fields=[
                ('id_permission', models.AutoField(primary_key=True, serialize=False)),
                ('module', models.CharField(max_length=100)),
                ('action', models.CharField(max_length=100)),
                ('description', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'permission',
                'verbose_name_plural': 'permissions',
                'unique_together': {('module', 'action')},
            },
        ),
        migrations.CreateModel(
            name='RolePermission',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('accorde', models.BooleanField(default=True)),
                ('id_permission', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='users.permission')),
                ('id_role', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='users.role')),
            ],
            options={
                'verbose_name': 'permission de role',
                'verbose_name_plural': 'permissions de role',
                'unique_together': {('id_role', 'id_permission')},
            },
        ),
    ]
